<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="hashim.gallery.presentation.main.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/padding_16">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10"
            android:checked="@={viewModel.isDialog}"
            android:text="@string/is_dialog"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:checked="@={viewModel.isShowImages}"
                android:text="@string/is_show_images"
                android:textColor="@color/black" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="@dimen/padding_40"
                android:checked="@={viewModel.isShowVideos}"
                android:text="@string/is_show_videos"
                android:textColor="@color/black" />
        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.isRTL()}"
                android:text="@string/rtl_direction"
                android:textColor="@color/black" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_40"
                android:checked="@={!viewModel.isRTL}"
                android:text="@string/ltr_direction"
                android:textColor="@color/black" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_4"
            android:text="@string/grid_columns"
            android:textColor="@color/black"
            android:textColorHint="@color/gray3"
            android:textSize="@dimen/font_size_16" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_4"
            android:hint="@string/grid_columns"
            android:inputType="number"
            android:text="@={viewModel.columns}"
            android:textColor="@color/black"
            android:textColorHint="@color/gray3"
            android:textSize="@dimen/font_size_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_4"
            android:text="@string/selection_count"
            android:textColor="@color/black"
            android:textColorHint="@color/gray3"
            android:textSize="@dimen/font_size_16" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_4"
            android:hint="@string/selection_count"
            android:inputType="number"
            android:text="@={viewModel.count}"
            android:textColor="@color/black"
            android:textColorHint="@color/gray3"
            android:textSize="@dimen/font_size_16" />

        <Button
            android:id="@+id/btnOpenGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding_20"
            android:onClick="@{()->viewModel.observer.openGallery()}"
            android:text="@string/open_gallery"
            android:textColor="@color/black" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcGallery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding_10"
            android:adapter="@{viewModel.recyclerGalleryAdapter}"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3" />

    </LinearLayout>

</layout>